styles/main.css
/*
home
about
projects
contact
resume  */

html, body {
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;        background-color: rgba(255,255,255,0.9);
    
}

/*Phone*/ 
@media only screen and (min-width : 300px) {

    .top-container {
        padding-top: 50%; 
        display: flex;
        flex-direction: column;
        align-items: center;
        /* justify-content: space-between; */
        width: 100%;
        /* justify-content: space-around; */
        z-index: 2;
    }

    .flower-holder {
    }

    .flower {
        position: absolute;
        top: 10%; 
        right: 0;
        /* margin-left: 10%; */
        /* margin-right: auto; */
        /* padding-left: 10%; */
        /* right: 0; */
        height: 62.5%;
        transform: rotate(35deg); 
        -webkit-filter: invert(1);  
        filter: invert(1); 
        z-index: -1;
    }

    .top-name {
        /* width: 100%; */
        padding-top: 25%;
        font-size: 3.25rem;
        color: rgba(0,0,0,.4);
        letter-spacing: 1px;
        /* font-weight: bold; */
    }

    .side-links {
        display: flex;
        flex-direction: column;
        /* margin-right: 20%; */
        margin-left: auto;
    }

    .side-links img {
        height: 40px;
        width: 40px; 
        padding-top: 15%;
        padding-bottom: 15%;
    }

    .main-photo {
        /* height: 150px;
        border-radius: 100%;  */
    }

    .link-and-greet {
        display: flex;
        /* display: none; */
        /* border: 15px solid rgba(0,140,255,0.5); */
        flex-direction: row;
        justify-content: space-between;
        width: 90%;
        align-items: center;
        padding-top: 35%;
        margin-bottom: 30%;
        border-radius: 25px;
        color: rgba(0,0,0,.7);
    }

    .greeting {
        width: 70%;
        text-align: center;
        padding: 7.5%;
        font-size: 1.25rem;
        color: rgba(0,0,0,.5);
        letter-spacing: 1px;
        /* background-color: white; */
        /* border-radius: 100%; */
    }

    .projects-title, .skills-title {
        display: flex;
        padding-bottom: 7.5%;
        /* padding-left: 5%; */
        justify-content: center;
        font-size: 2.8rem;
        color: rgba(0,0,0,.4);
    }

    .skills-title {
        display: flex;
        padding-top: 30%;
        /* padding-right: 5%; */
    }

    .middle-container {
        display: flex;
        flex-direction: column;
        align-items: center;
        padding-left: 5%;
        padding-right: 5%;
        margin-left: 7.5%;
        /* margin-right: 5%; */
        width: 95%;
        padding-bottom: 5%;
        font-size: 2.8rem;
        color: rgba(0,0,0,.4);
    }

    .biolingual, .airtv {
        display: flex;
        flex-direction: column;
        align-items: center;
        font-size: 1rem;
        border: 1px solid rgba(0,0,0,.4);
        background-color: rgba(0,0,0,.05);
        border-radius: 25px;
        padding: 2rem;
    }

    .airtv {
        margin-top: 5%;
        font-weight: bold;
    }

    .skills-container {
        display: flex;
        flex-flow: row wrap;
        /* margin-left: 25%;
        margin-right: 25%; */
        margin-bottom: 10%;
        border: 1px solid rgba(0,0,0,.4);
        background-color: rgba(0,0,0,.05);
        border-radius: 25px;
        padding: 2rem;
        width: 40%;
        /* margin-left: 20%;
        margin-right: 20%; */
    }

    .skills-container div {
        display: flex;
        width: 100%;
        justify-content: space-around;
        padding-bottom: 5%;
    }

    .skills-container img {
        height: 40px;
    }

}

/*Phone*/
@media only screen and (min-width : 300px) and (orientation: landscape) {}


/*Tablet*/
@media only screen and (min-width : 750px) {}


/*Desktop*/
@media only screen and (min-width : 1200px) {}

